tests/errors/002-parsing/003-expected-expression/004-in-arguments-list/006-middle-assignment-to-declaration.xxx
x := (a : int = 1, b : int = , c : int = 3) => () { }

// @TODO This should yield the same error.
// x := (a:int=1,b:int=,c:int=3) => () { }
